--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,7 @@ h1 {
   font-weight: bold;
   font-size: 48px;
   margin-top: 20px;
+  text-align: center;
 }
 
 footer {
@@ -40,4 +41,24 @@ li {
 }
 ul {
   margin: 20px 20px;
+}
+
+form {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  text-align: center;
+}
+
+input {
+  width: 100px;
+  height: 50px;
+  text-align: center;
+  box-decoration-break: slice;
+  font-weight: bold;
+}
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
